bdr.BDR.scala.error
Erreur de compilation :
BDR:16: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="L"){
                     ^BDR:21: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="I"){
                     ^BDR:27: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="A"){
                     ^BDR:31: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="B"){
                     ^BDR:35: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="C"){
                     ^BDR:41: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="Z"){
                     ^BDR:44: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="Y"){
                     ^BDR:50: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ( lecture="X"){
                     ^