bdr.BDR.scala.code
var dejaFait: Int=0;
var lecture: String="";
val site: List[String] = List("R","L","I","A","B","C","Z","Y","X");


while(dejaFait!=1){
  lecture=litMessage();
  
  
  
  
  
  if (lecture=="R"){
    droite();
    avance();
  } else if ( lecture="L"){
    
    gauche();
    avance()
    
  } else if ( lecture="I"){
    gauche();
    gauche();
    avance();
    
    
  } else if ( lecture="A"){
    avance();
    
    
  } else if ( lecture="B"){
    
    avance();
    
  } else if ( lecture="C"){
    avance();
    avance();
    avance();
    

  } else if ( lecture="Z"){
    recule();
   
  } else if ( lecture="Y"){
    recule();
    recule();
  
    
    
  } else if ( lecture="X"){
    
    recule();
    recule();
    recule();
    
  } else {
    dejaFait=1
  }
  
  
  
}